# proyecto-maestros

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
app/repositories/: autores_repository.py  obras_repository.py
app/services/: autores_service.py  obras_service.py
app/utils/: database.py
app/web/: flask_app.py
app/web/routes/: autores_routes.py  home_routes.py  mapa_routes.py  obras_routes.py
app/web/static/css/: styles.css
app/web/templates/: autores_list.html  base.html  home.html  mapa.html  obras_list.html
data/: esculturas-publicas-medellin-limpio.csv
scripts/: init_db.sql  load_data.py  seed_coordinates.py
tests/: load_data.py  test_autores.py  test_obras.py
